Продолжил работу на отправкой email

--- a/foldernikita/.env
+++ b/foldernikita/.env
@@ -1,9 +1,9 @@
 FLASK_ENV=development
 
-MAIL_SERVER=
-MAIL_PORT=
-MAIL_USERNAME=
-MAIL_PASSWORD=
-MAIL_USE_SSL=
-MAIL_BACKEND=
+MAIL_SERVER=smtp.yandex.ru
+MAIL_PORT=465
+MAIL_USERNAME=lobachnkt1@yandex.ru
+MAIL_PASSWORD=spjhmafrqijrnlbk
+MAIL_USE_SSL=True
+MAIL_BACKEND=smtp
 
