Начал работу над ЛК

--- a/foldernikita/.env
+++ b/foldernikita/.env
@@ -2,7 +2,7 @@ FLASK_ENV=development
 
 MAIL_SERVER=smtp.yandex.ru
 MAIL_PORT=465
-MAIL_USERNAME=lobachnkt1@yandex.ru
+MAIL_USERNAME=lobachnkt1
 MAIL_PASSWORD=spjhmafrqijrnlbk
 MAIL_USE_SSL=True
 MAIL_BACKEND=smtp
